plugins {
    id 'fabric-loom' version '1.9.2'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', 'src/client/java']
        }
        resources {
            srcDirs = ['src/main/resources', 'src/client/resources']
        }
    }
}

repositories {
    mavenCentral()
    // Add maven repo for Cloth Config
    maven { url "https://maven.shedaniel.me/" }
    // Add maven repo for ModMenu
    maven { url "https://maven.terraformersmc.com/releases/" }
    // Add Modrinth Maven repository
    maven { url "https://api.modrinth.com/maven" }
}

base {
    archivesName = project.archives_base_name
}

dependencies {
    implementation 'com.azure:azure-ai-openai:1.0.0-beta.5'
    implementation 'com.azure:azure-core:1.54.1'
    implementation 'com.azure:azure-identity:1.11.0'
    implementation 'com.azure:azure-core-http-netty:1.15.7'
    
    // Required dependencies for Azure SDK
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-item-api-v1:${project.fabric_version}"

    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
    implementation 'com.google.code.gson:gson:2.8.9'
    
    // Cloth Config API
    // Find the latest Cloth Config version compatible with 1.21.5
    modApi("maven.modrinth:cloth-config:17.0.144+fabric") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    // Add cloth-basic-math dependency
    modImplementation("me.shedaniel.cloth:basic-math:0.6.1") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    
    // ModMenu integration
    // Updated ModMenu version based on available releases
    modImplementation("com.terraformersmc:modmenu:13.0.3")

    // OSHI for hardware detection
    implementation 'com.github.oshi:oshi-core:6.6.1' // Check for latest compatible version
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}
